add sql and file working

--- a/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
+++ b/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -45,9 +45,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('public', 'actor', 'postgres', None, True, False, True, False),\n ('public', 'store', 'postgres', None, True, False, True, False),\n ('public', 'address', 'postgres', None, True, False, True, False),\n ('public', 'category', 'postgres', None, True, False, True, False),\n ('public', 'city', 'postgres', None, True, False, True, False),\n ('public', 'country', 'postgres', None, True, False, True, False),\n ('public', 'customer', 'postgres', None, True, False, True, False),\n ('public', 'film_actor', 'postgres', None, True, False, True, False),\n ('public', 'film_category', 'postgres', None, True, False, True, False),\n ('public', 'inventory', 'postgres', None, True, False, True, False),\n ('public', 'language', 'postgres', None, True, False, True, False),\n ('public', 'rental', 'postgres', None, True, False, True, False),\n ('public', 'staff', 'postgres', None, True, False, True, False),\n ('public', 'payment', 'postgres', None, True, False, True, False),\n ('public', 'film', 'postgres', None, True, False, True, False)]"
+      "text/plain": "[('public', 'actor', 'postgres', None, True, False, True, False),\n ('public', 'store', 'postgres', None, True, False, True, False),\n ('public', 'address', 'postgres', None, True, False, True, False),\n ('public', 'category', 'postgres', None, True, False, True, False),\n ('public', 'city', 'postgres', None, True, False, True, False),\n ('public', 'country', 'postgres', None, True, False, True, False),\n ('public', 'customer', 'postgres', None, True, False, True, False),\n ('public', 'film_actor', 'postgres', None, True, False, True, False),\n ('public', 'film_category', 'postgres', None, True, False, True, False),\n ('public', 'inventory', 'postgres', None, True, False, True, False),\n ('public', 'language', 'postgres', None, True, False, True, False),\n ('public', 'rental', 'postgres', None, True, False, True, False),\n ('public', 'staff', 'postgres', None, True, False, True, False),\n ('public', 'payment', 'postgres', None, True, False, True, False),\n ('public', 'film', 'postgres', None, True, False, True, False),\n ('public', 'customer_sex', 'postgres', None, True, False, False, False),\n ('public', 'customer_email', 'postgres', None, True, False, False, False)]"
      },
-     "execution_count": 47,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,6 +55,7 @@
    "source": [
     "import psycopg2\n",
     "from sqlalchemy import create_engine\n",
+    "from sql import sql_query\n",
     "conn = psycopg2.connect(dbname='dvdrental', user='postgres',\n",
     "                        password='postgres', host='localhost', port=5432)\n",
     "cur = conn.cursor()\n",
@@ -94,7 +95,6 @@
     }
    ],
    "source": [
-    "from sql import sql_query\n",
     "sql_query(\"\"\"\n",
     "SELECT *\n",
     "FROM customer\n",
@@ -479,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "       month       sum\n0    Февраль   8351.84\n1  Остальные  29073.64\n2       Март  23886.56",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>sum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Февраль</td>\n      <td>8351.84</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Остальные</td>\n      <td>29073.64</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Март</td>\n      <td>23886.56</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "       month  total_amount\n0    Февраль       8351.84\n1  Остальные      29073.64\n2       Март      23886.56",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>total_amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Февраль</td>\n      <td>8351.84</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Остальные</td>\n      <td>29073.64</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Март</td>\n      <td>23886.56</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
     "WHEN EXTRACT(MONTH FROM payment_date) = 3 THEN 'Март'\n",
     "ELSE 'Остальные'\n",
     "END as month,\n",
-    "SUM(amount)\n",
+    "SUM(amount) as total_amount\n",
     "FROM payment\n",
     "GROUP BY month\n",
     "\"\"\")\n"
@@ -514,7 +514,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Подзапросы\n",
+    "## Подзапросы (subqueries)\n",
     "\n",
     "Это запросы, вложенные в главный запрос."
    ],
@@ -538,6 +538,48 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       month  total_amount\n0    Февраль       3226.70\n1       Март       9880.21\n2  Остальные      12011.98",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>total_amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Февраль</td>\n      <td>3226.70</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Март</td>\n      <td>9880.21</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Остальные</td>\n      <td>12011.98</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Найти сумму выплат за февраль и март ДЛЯ КЛИЕНТОВ, у которых суммарная стоимость не превысит 10долларов.\n",
+    "sql_query(\"\"\"\n",
+    "SELECT\n",
+    "CASE WHEN EXTRACT(MONTH FROM payment_date) = 2 THEN 'Февраль'\n",
+    "WHEN EXTRACT(MONTH FROM payment_date) = 3 THEN 'Март'\n",
+    "ELSE 'Остальные'\n",
+    "END as month,\n",
+    "SUM(amount) as total_amount\n",
+    "FROM payment\n",
+    "WHERE customer_id IN (\n",
+    "SELECT customer_id\n",
+    "FROM payment\n",
+    "GROUP BY customer_id\n",
+    "HAVING sum(amount) < 100\n",
+    ")\n",
+    "GROUP BY month\n",
+    "ORDER BY total_amount\n",
+    "DESC\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Подзапросы в FROM"
@@ -546,6 +588,33 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     customer_id  store_id first_name  last_name  \\\n0            524         1      Jared        Ely   \n1              1         1       Mary      Smith   \n2              2         1   Patricia    Johnson   \n3              3         1      Linda   Williams   \n4              4         2    Barbara      Jones   \n..           ...       ...        ...        ...   \n594          595         1   Terrence  Gunderson   \n595          596         1    Enrique   Forsythe   \n596          597         1    Freddie     Duggan   \n597          598         1       Wade   Delvalle   \n598          599         2     Austin    Cintron   \n\n                                     email  address_id  activebool  \\\n0             jared.ely@sakilacustomer.org         530        True   \n1            mary.smith@sakilacustomer.org           5        True   \n2      patricia.johnson@sakilacustomer.org           6        True   \n3        linda.williams@sakilacustomer.org           7        True   \n4         barbara.jones@sakilacustomer.org           8        True   \n..                                     ...         ...         ...   \n594  terrence.gunderson@sakilacustomer.org         601        True   \n595    enrique.forsythe@sakilacustomer.org         602        True   \n596      freddie.duggan@sakilacustomer.org         603        True   \n597       wade.delvalle@sakilacustomer.org         604        True   \n598      austin.cintron@sakilacustomer.org         605        True   \n\n    create_date             last_update  active  \n0    2006-02-14 2013-05-26 14:49:45.738       1  \n1    2006-02-14 2013-05-26 14:49:45.738       1  \n2    2006-02-14 2013-05-26 14:49:45.738       1  \n3    2006-02-14 2013-05-26 14:49:45.738       1  \n4    2006-02-14 2013-05-26 14:49:45.738       1  \n..          ...                     ...     ...  \n594  2006-02-14 2013-05-26 14:49:45.738       1  \n595  2006-02-14 2013-05-26 14:49:45.738       1  \n596  2006-02-14 2013-05-26 14:49:45.738       1  \n597  2006-02-14 2013-05-26 14:49:45.738       1  \n598  2006-02-14 2013-05-26 14:49:45.738       1  \n\n[599 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>store_id</th>\n      <th>first_name</th>\n      <th>last_name</th>\n      <th>email</th>\n      <th>address_id</th>\n      <th>activebool</th>\n      <th>create_date</th>\n      <th>last_update</th>\n      <th>active</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>524</td>\n      <td>1</td>\n      <td>Jared</td>\n      <td>Ely</td>\n      <td>jared.ely@sakilacustomer.org</td>\n      <td>530</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Mary</td>\n      <td>Smith</td>\n      <td>mary.smith@sakilacustomer.org</td>\n      <td>5</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>1</td>\n      <td>Patricia</td>\n      <td>Johnson</td>\n      <td>patricia.johnson@sakilacustomer.org</td>\n      <td>6</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n      <td>Linda</td>\n      <td>Williams</td>\n      <td>linda.williams@sakilacustomer.org</td>\n      <td>7</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2</td>\n      <td>Barbara</td>\n      <td>Jones</td>\n      <td>barbara.jones@sakilacustomer.org</td>\n      <td>8</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>594</th>\n      <td>595</td>\n      <td>1</td>\n      <td>Terrence</td>\n      <td>Gunderson</td>\n      <td>terrence.gunderson@sakilacustomer.org</td>\n      <td>601</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>595</th>\n      <td>596</td>\n      <td>1</td>\n      <td>Enrique</td>\n      <td>Forsythe</td>\n      <td>enrique.forsythe@sakilacustomer.org</td>\n      <td>602</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>596</th>\n      <td>597</td>\n      <td>1</td>\n      <td>Freddie</td>\n      <td>Duggan</td>\n      <td>freddie.duggan@sakilacustomer.org</td>\n      <td>603</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>597</th>\n      <td>598</td>\n      <td>1</td>\n      <td>Wade</td>\n      <td>Delvalle</td>\n      <td>wade.delvalle@sakilacustomer.org</td>\n      <td>604</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>598</th>\n      <td>599</td>\n      <td>2</td>\n      <td>Austin</td>\n      <td>Cintron</td>\n      <td>austin.cintron@sakilacustomer.org</td>\n      <td>605</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>599 rows × 10 columns</p>\n</div>"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_query(\"\"\"\n",
+    "SELECT * FROM\n",
+    "customer\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -562,6 +631,96 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sql_query(\"\"\"\n",
+    "SELECT col1, col2,\n",
+    "SELECT()\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Коррелированные запросы\n",
+    "\n",
+    "Это вложенные запросы, которые связаны с внешними таблицами.\n",
+    "Отметим, что скорость выполнения таких запросов сильно замедляется."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Обобщенные табличные выражения - CTE (Common table expressions)\n",
+    "\n",
+    "Для того чтобы не нагромождать код вложенными запросами, можно использовать CTE.\n",
+    "По сути это тот же подзапрос, только выводится он в начало всего кода и используется как новая таблица, хранящаяся в оперативной памяти."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       month  total_amount\n0  Остальные      12011.98\n1       Март       9880.21\n2    Февраль       3226.70",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>total_amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Остальные</td>\n      <td>12011.98</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Март</td>\n      <td>9880.21</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Февраль</td>\n      <td>3226.70</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Найти сумму выплат за февраль и март ДЛЯ КЛИЕНТОВ, у которых суммарная стоимость не превысит 10долларов.\n",
+    "sql_query(\"\"\"\n",
+    "\n",
+    "WITH cust_id AS (SELECT customer_id\n",
+    "FROM payment\n",
+    "GROUP BY customer_id\n",
+    "HAVING sum(amount) < 100)\n",
+    "\n",
+    "SELECT\n",
+    "CASE WHEN EXTRACT(MONTH FROM payment_date) = 2 THEN 'Февраль'\n",
+    "WHEN EXTRACT(MONTH FROM payment_date) = 3 THEN 'Март'\n",
+    "ELSE 'Остальные'\n",
+    "END as month,\n",
+    "SUM(amount) as total_amount\n",
+    "FROM payment\n",
+    "WHERE customer_id IN (SELECT customer_id FROM cust_id)\n",
+    "GROUP BY month\n",
+    "ORDER BY total_amount\n",
+    "DESC\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Оконные функции"
@@ -574,122 +733,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Функции"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Код дохода = 2000"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "941684.18"
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "149_500 + 149_500 + 149_500 + 146_616 + 149_500 + 149_500 + 47_568.18"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "122418.9434"
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "941684.18 * 0.13"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1375.14"
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "10578 * 0.13"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "17902.43"
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "137711 * 0.13"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -698,6 +741,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Функции"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
