--- a/6. Работа с данными/Работа с файлами.ipynb
+++ b/6. Работа с данными/Работа с файлами.ipynb
@@ -26,11 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными\n",
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными/Files\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "os.chdir(\"./Files\")"
+    "print(os.getcwd())  # посмотреть рабочую директорию\n",
+    "os.chdir(\"./Files\")  # сменить рабочую директорию\n",
+    "print(os.getcwd())  # посмотреть снова рабочую директорию"
    ],
    "metadata": {
     "collapsed": false,
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "file = open(\"file1.txt\",\"w+\")  # w+ означает запись\n",
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Открываем файлы правильно\n",
@@ -106,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 51.1 ms, sys: 6.12 ms, total: 57.3 ms\n",
-      "Wall time: 66.8 ms\n",
-      "CPU times: user 43.1 ms, sys: 3.89 ms, total: 46.9 ms\n",
-      "Wall time: 53.3 ms\n",
-      "CPU times: user 2.39 s, sys: 4.25 s, total: 6.64 s\n",
-      "Wall time: 8.29 s\n"
+      "CPU times: user 54.6 ms, sys: 9.61 ms, total: 64.2 ms\n",
+      "Wall time: 99.1 ms\n",
+      "CPU times: user 41.5 ms, sys: 4.42 ms, total: 45.9 ms\n",
+      "Wall time: 62.6 ms\n",
+      "CPU times: user 2.61 s, sys: 4.72 s, total: 7.33 s\n",
+      "Wall time: 12.9 s\n"
      ]
     }
    ],
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -220,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "with open(\"test1.txt\", \"w+\") as f:\n",
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "import csv\n",
@@ -274,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Добавим данных в csv\n",
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -302,6 +313,7 @@
       "Berlin,Germany\n",
       "Shanghai,China\n",
       "Moscow,Russia\n",
+      "Moscow,Russia,Capital\n",
       "\n"
      ]
     }
@@ -319,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "with open(\"cities.json\", \"w+\") as file:\n",
@@ -334,13 +346,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "{'city': 'Amsterdam', 'country': 'Netherlands'}"
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,18 +383,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "os.stat_result(st_mode=33188, st_ino=4395118662, st_dev=16777220, st_nlink=1, st_uid=501, st_gid=20, st_size=84, st_atime=1643234849, st_mtime=1643234848, st_ctime=1643234848)\n"
+      "os.stat_result(st_mode=33188, st_ino=4395533865, st_dev=16777220, st_nlink=1, st_uid=501, st_gid=20, st_size=107, st_atime=1643916535, st_mtime=1643916533, st_ctime=1643916533)\n"
      ]
     }
    ],
    "source": [
     "print(os.stat(\"cities.csv\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "datetime.datetime(2022, 2, 3, 22, 28, 55)"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "datetime.fromtimestamp(1643916535)"
    ],
    "metadata": {
     "collapsed": false,
@@ -407,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1643234849.5536268\n",
-      "1643234848.445931\n",
-      "1643234848.445931\n",
-      "84\n"
+      "1643916535.9090462\n",
+      "1643916533.8795009\n",
+      "1643916533.8795009\n",
+      "107\n"
      ]
     }
    ],
@@ -435,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
       "text/plain": "'file1_copy.txt'"
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,14 +543,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cities_new.csv']\n",
-      "['cities_new.csv']\n"
+      "['cities.csv', 'cities_new.csv']\n",
+      "['cities.csv', 'cities_new.csv']\n"
      ]
     }
    ],
@@ -532,15 +568,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       ".csv\n",
+      "cities.csv\n",
       "cities_new.csv\n",
       ".csv\n",
+      "cities.csv\n",
       "cities_new.csv\n"
      ]
     }
@@ -576,13 +614,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       ".csv\n",
+      "cities.csv\n",
       "cities_new.csv\n"
      ]
     }
@@ -718,25 +757,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "to_csv() got an unexpected keyword argument 'method'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_69807/2501993541.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mdf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread_csv\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"cities_new.csv\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mdf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'Kiev'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'Ukraine'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mdf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mto_csv\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"cities_new.csv\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mindex\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmethod\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'append'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m: to_csv() got an unexpected keyword argument 'method'"
-     ]
-    }
-   ],
+   "execution_count": 41,
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"cities_new.csv\")\n",
     "df.append(['Kiev', 'Ukraine'])\n",
-    "df.to_csv(\"cities_new.csv\", index=False, mode='a', header)"
+    "df.to_csv(\"cities_new.csv\", index=False, mode='a', header=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        city      country\n0  Amsterdam  Netherlands\n1     Berlin      Germany\n2   Shanghai        China\n3     Moscow       Russia\n4       city      country\n5  Amsterdam  Netherlands\n6     Berlin      Germany\n7   Shanghai        China\n8     Moscow       Russia",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>city</th>\n      <th>country</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Amsterdam</td>\n      <td>Netherlands</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Berlin</td>\n      <td>Germany</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Shanghai</td>\n      <td>China</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Moscow</td>\n      <td>Russia</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>city</td>\n      <td>country</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Amsterdam</td>\n      <td>Netherlands</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Berlin</td>\n      <td>Germany</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Shanghai</td>\n      <td>China</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Moscow</td>\n      <td>Russia</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"cities_new.csv\")"
    ],
    "metadata": {
     "collapsed": false,
